--- a/TicTacToeConsole/TicTacToeConsole.csproj
+++ b/TicTacToeConsole/TicTacToeConsole.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TicTacToeClassLibrary\TicTacToeClassLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
